--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "crop-node": "^2.1.0",
     "puppeteer": "^8.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "npx babel-node index.js"
+  }
 }
